@@ -10,5 +10,3 @@
 	<div class="post-foot"><?php do_action('easel-post-foot'); ?></div>
 	<div class="clear"></div>
 </div>
-<?php 
-comments_template('', true);
